Remove personal datas & img

--- a/src/locales/en/footer.json
+++ b/src/locales/en/footer.json
@@ -1,8 +1,8 @@
 {
-  "githubAriaLabel": "Elisabeth Faujour's GitHub Profile",
-  "linkedinAriaLabel": "Elisabeth Faujour's LinkedIn Profile",
-  "emailAriaLabel": "Send an email to Elisabeth Faujour",
-  "rights": "© 2024 Elisabeth FAUJOUR - All rights reserved.",
+  "githubAriaLabel": "Elisabeth GitHub Profile",
+  "linkedinAriaLabel": "Elisabeth LinkedIn Profile",
+  "emailAriaLabel": "Send an email to Elisabeth",
+  "rights": "© 2024 Elisabeth F. - All rights reserved.",
   "madeWith": "Made with",
   "next": "NextJS"
 }
