--- a/src/locales/en/home.json
+++ b/src/locales/en/home.json
@@ -1,11 +1,8 @@
 {
-  "githubAriaLabel": "Elisabeth Faujour's GitHub Profile",
-  "linkedinAriaLabel": "Elisabeth Faujour's LinkedIn Profile",
-  "emailAriaLabel": "Send an email to Elisabeth Faujour",
+  "githubAriaLabel": "Elisabeth GitHub Profile",
+  "linkedinAriaLabel": "Elisabeth LinkedIn Profile",
+  "emailAriaLabel": "Send an email to Elisabeth",
   "jobTitle": "React Web Developer | Next.js | Node.js",
-  "resumeButton": "My Resume",
-  "resumeAriaLabel": "Download my Resume",
-  "resumeTitle": "Download my Resume",
-  "resumeLink": "/docs/Elisabeth_FAUJOUR_CV_vEnglish.pdf",
+  "contactButton": "Contact me",
   "scrollArrowAriaLabel": "Scroll down to the About section"
 }
