--- a/src/locales/fr/footer.json
+++ b/src/locales/fr/footer.json
@@ -1,8 +1,8 @@
 {
-  "githubAriaLabel": "Profil GitHub de Elisabeth Faujour",
-  "linkedinAriaLabel": "Profil LinkedIn de Elisabeth Faujour",
-  "emailAriaLabel": "Envoyer un e-mail à Elisabeth Faujour",
-  "rights": "© 2024 Elisabeth FAUJOUR - Tous droits réservés.",
+  "githubAriaLabel": "Profil GitHub de Elisabeth",
+  "linkedinAriaLabel": "Profil LinkedIn de Elisabeth",
+  "emailAriaLabel": "Envoyer un e-mail à Elisabeth",
+  "rights": "© 2024 Elisabeth F. - Tous droits réservés.",
   "madeWith": "Réalisé avec",
   "next": "NextJS"
 }
